// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HeaderSlideTitle Advanced 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 48,
        "paddingVertical": 16,
      },
      Object {
        "height": 60,
      },
    ]
  }
  testID="header-slide-title"
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEFF1",
        "borderRadius": 1000,
        "height": 28,
        "overflow": "hidden",
        "width": 28,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "backgroundColor": "#ECEFF1",
          "borderRadius": 1000,
          "height": 28,
          "overflow": "hidden",
          "width": 28,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://assets-jpcust.jwpsrv.com/thumbnails/2ad64hgq-720.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 28,
              "width": 28,
            },
            undefined,
          ]
        }
        testID="header-slide-title-image"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontSize": 12,
              "fontWeight": "700",
            },
            Object {
              "color": "#00B0FF",
            },
          ],
        ]
      }
    >
      Advanced
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Object {
            "color": "#546E7A",
            "fontSize": 12,
            "fontWeight": "700",
          },
        ]
      }
      testID="header-slide-title-title"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
    </Text>
  </View>
</View>
`;

exports[`Storyshots HeaderSlideTitle Basic 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 48,
        "paddingVertical": 16,
      },
      Object {
        "height": 60,
      },
    ]
  }
  testID="header-slide-title"
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEFF1",
        "borderRadius": 1000,
        "height": 28,
        "overflow": "hidden",
        "width": 28,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "backgroundColor": "#ECEFF1",
          "borderRadius": 1000,
          "height": 28,
          "overflow": "hidden",
          "width": 28,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://assets-jpcust.jwpsrv.com/thumbnails/2ad64hgq-720.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 28,
              "width": 28,
            },
            undefined,
          ]
        }
        testID="header-slide-title-image"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontSize": 12,
              "fontWeight": "700",
            },
            Object {
              "color": "#00B0FF",
            },
          ],
        ]
      }
    >
      Basic
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Object {
            "color": "#546E7A",
            "fontSize": 12,
            "fontWeight": "700",
          },
        ]
      }
      testID="header-slide-title-title"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
    </Text>
  </View>
</View>
`;

exports[`Storyshots HeaderSlideTitle Coach 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 48,
        "paddingVertical": 16,
      },
      Object {
        "height": 60,
      },
    ]
  }
  testID="header-slide-title"
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEFF1",
        "borderRadius": 1000,
        "height": 28,
        "overflow": "hidden",
        "width": 28,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "backgroundColor": "#ECEFF1",
          "borderRadius": 1000,
          "height": 28,
          "overflow": "hidden",
          "width": 28,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://assets-jpcust.jwpsrv.com/thumbnails/2ad64hgq-720.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 28,
              "width": 28,
            },
            undefined,
          ]
        }
        testID="header-slide-title-image"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontSize": 12,
              "fontWeight": "700",
            },
            Object {
              "color": "#00B0FF",
            },
          ],
        ]
      }
    >
      Coach
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {},
          Object {
            "color": "#546E7A",
            "fontSize": 12,
            "fontWeight": "700",
          },
        ]
      }
      testID="header-slide-title-title"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
    </Text>
  </View>
</View>
`;

exports[`Storyshots HeaderSlideTitle Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "paddingRight": 48,
        "paddingVertical": 16,
      },
      Object {
        "height": 60,
      },
    ]
  }
  testID="header-slide-title"
>
  <View
    style={
      Object {
        "backgroundColor": "#ECEFF1",
        "borderRadius": 1000,
        "height": 28,
        "overflow": "hidden",
        "width": 28,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "justifyContent": "center",
          },
          Object {
            "height": undefined,
          },
          undefined,
        ]
      }
    >
      <View
        noMargin={true}
        style={
          Array [
            Object {
              "borderRadius": 0,
            },
            Object {
              "height": 5,
            },
            Object {
              "backgroundColor": "#ECEFF1",
            },
          ]
        }
        width="15%"
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 8,
          "width": 8,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "justifyContent": "center",
          },
          Object {
            "height": undefined,
          },
          undefined,
        ]
      }
    >
      <View
        noMargin={true}
        style={
          Array [
            Object {
              "borderRadius": 0,
            },
            Object {
              "height": 5,
            },
            Object {
              "backgroundColor": "#ECEFF1",
            },
          ]
        }
        width="50%"
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
